Name:           htravistest
Version:        0.1
License-file:   LICENSE
Cabal-Version:  >= 1.9.2
Author:         Mikeccy
Maintainer:     Mikeccy
Build-type:     Simple

Executable htravistest
    Main-is:        Test.hs
    Build-depends:  base, QuickCheck

Test-Suite Test
    type:           exitcode-stdio-1.0
    main-is:        Test.hs
    build-depends:  base, QuickCheck
